# shawty-be

./: .env.example  .env.test  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflow/: test-deploy.yml
.github/workflows/: test-deploy.yml
alembic/: env.py
app/: main.py
app/api/: health_router.py  url_shortener_router.py  urls.py
app/core/: settings.py
app/core/cache/: redis.py
app/core/database/: get_pymongo.py  mongodb_initializer.py
app/core/exceptions/: AppExceptionCase.py
app/core/models/: CustomModel.py
app/core/schemas/: BaseSchema.py
app/core/services/: AppDao.py  AppService.py  DbSessionMixin.py  ServiceResult.py
app/core/utils/: app_exception_helper.py  result_handler.py
app/dao/: CounterDao.py  UrlShorteningDao.py
app/exceptions/: CoreExceptions.py  UrlShorteningExceptions.py
app/models/: CounterModel.py  ShortenUrlModel.py  __init__.py
app/schemas/api/requests/: ShortenURLRequestSchema.py
app/schemas/api/responses/: AppExceptionResponseSchema.py  ShortenURLResponseSchema.py
app/services/: CacheService.py  UrlShorteningService.py
app/tests/: base_tests.py  core_tests.py  counter_tests.py  util_tests.py
app/tests/fixtures/: mock_beanie.py
app/utils/: convert_base10_to_base58.py  convert_base58_to_base10.py
configurations/: redis.conf
