[tool.poetry]
name = "shawty-be"
version = "0.1.0"
description = "Backend for shawty, an application that shortens urls and let's you reach those tweet limits or not have annoying 200 character links in your messages to your family."
authors = ["Semih Yonet <semih@shoppingminds.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.112.0" }
pydantic-settings = "^2.4.0"
alembic = "^1.13.2"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
redis = "^5.0.8"
beanie = "^1.26.0"
parameterized = "^0.9.0"
mongomock = "^4.1.2"
flake8 = "^7.1.1"
pytz = "^2024.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
